# rpn-calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test_ci.yml
app/: __init__.py  config.py  main.py  models.py  routes.py
app/database/: __init__.py  base.py  models.py  session.py
app/utils/: __init__.py
resources/: .prettierrc.json  package-lock.json  package.json  vite.config.ts
resources/src/: App.css  App.tsx  main.tsx
resources/src/api/: getResult.ts
resources/src/components/: ExpressionInput.tsx  Heading.tsx  HistoryPanel.tsx  HowDoesItWork.tsx
tests/: calc_test.py
utils/: __init__.py  calc.py
